--- a/LoginScreen/LoginScreen/Base.lproj/Main.storyboard
+++ b/LoginScreen/LoginScreen/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="gRX-lK-Ej6">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="271-KB-r5Y">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -321,9 +321,9 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ADJ-aw-svg">
-                                <rect key="frame" x="72" y="477" width="248" height="63"/>
+                                <rect key="frame" x="27" y="587" width="341" height="63"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="63" id="3f8-sA-fl0"/>
+                                    <constraint firstAttribute="height" constant="63" id="aIG-eW-S94"/>
                                 </constraints>
                                 <attributedString key="attributedText">
                                     <fragment content="Now you can see the    app content!">
@@ -341,9 +341,9 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NAME" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lqe-Xl-eOt">
-                                <rect key="frame" x="25" y="396" width="343" height="72"/>
+                                <rect key="frame" x="25" y="472" width="343" height="72"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="72" id="9hG-PU-jzW"/>
+                                    <constraint firstAttribute="height" constant="72" id="cbS-Fq-42Q"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="PTMono-Bold" family="PT Mono" pointSize="36"/>
                                 <nil key="textColor"/>
@@ -374,40 +374,40 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="layer.MaskToBounds" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="YOU " lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cre-Qm-0QB">
-                                <rect key="frame" x="38" y="366.66666666666669" width="318" height="20.333333333333314"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="YOU ARE LOGGED IN" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cre-Qm-0QB">
+                                <rect key="frame" x="27" y="353" width="341" height="80"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="80" id="zz6-Y1-Dn5"/>
+                                    <constraint firstAttribute="height" constant="80" id="LEv-Ev-rmp"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="PTMono-Bold" family="PT Mono" pointSize="18"/>
                                 <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image 1" translatesAutoresizingMaskIntoConstraints="NO" id="Exr-Nh-dHF">
-                                <rect key="frame" x="99" y="108" width="294" height="300"/>
+                                <rect key="frame" x="99" y="95" width="294" height="300"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="300" id="Q9r-VP-QZf"/>
-                                    <constraint firstAttribute="width" constant="294" id="coc-pk-qtb"/>
+                                    <constraint firstAttribute="height" constant="300" id="HJp-fI-PsN"/>
+                                    <constraint firstAttribute="width" constant="294" id="nCo-s1-TDB"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="aNc-74-ZgE"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="ADJ-aw-svg" firstAttribute="leading" secondItem="fZf-Kl-KyV" secondAttribute="leading" constant="72" id="5M6-c2-796"/>
                             <constraint firstAttribute="trailing" secondItem="SYY-kr-ons" secondAttribute="trailing" constant="97" id="Ct3-Y2-d60"/>
-                            <constraint firstItem="SYY-kr-ons" firstAttribute="top" secondItem="ADJ-aw-svg" secondAttribute="bottom" constant="154" id="Foy-49-el7"/>
+                            <constraint firstItem="ADJ-aw-svg" firstAttribute="top" secondItem="lqe-Xl-eOt" secondAttribute="bottom" constant="43" id="EaW-oC-Jra"/>
                             <constraint firstItem="SYY-kr-ons" firstAttribute="leading" secondItem="fZf-Kl-KyV" secondAttribute="leading" constant="97" id="Ft0-Vu-ROY"/>
                             <constraint firstItem="aNc-74-ZgE" firstAttribute="trailing" secondItem="lqe-Xl-eOt" secondAttribute="trailing" constant="25" id="I7E-35-XYr"/>
-                            <constraint firstItem="ADJ-aw-svg" firstAttribute="top" secondItem="lqe-Xl-eOt" secondAttribute="bottom" constant="9" id="KS9-bh-Jhd"/>
-                            <constraint firstItem="aNc-74-ZgE" firstAttribute="bottom" secondItem="SYY-kr-ons" secondAttribute="bottom" constant="61" id="TJM-XU-d8x"/>
-                            <constraint firstItem="Exr-Nh-dHF" firstAttribute="top" secondItem="aNc-74-ZgE" secondAttribute="top" constant="49" id="bZb-ha-GtP"/>
-                            <constraint firstItem="lqe-Xl-eOt" firstAttribute="top" secondItem="cre-Qm-0QB" secondAttribute="bottom" constant="9" id="bcH-OD-bog"/>
+                            <constraint firstItem="ADJ-aw-svg" firstAttribute="leading" secondItem="fZf-Kl-KyV" secondAttribute="leading" constant="27" id="OnP-xW-0CO"/>
+                            <constraint firstItem="cre-Qm-0QB" firstAttribute="top" secondItem="Exr-Nh-dHF" secondAttribute="bottom" constant="-42" id="UPl-vV-Snu"/>
                             <constraint firstItem="lqe-Xl-eOt" firstAttribute="leading" secondItem="aNc-74-ZgE" secondAttribute="leading" constant="25" id="dNt-Ed-1TA"/>
-                            <constraint firstItem="aNc-74-ZgE" firstAttribute="trailing" secondItem="ADJ-aw-svg" secondAttribute="trailing" constant="73" id="ntD-Nm-cYT"/>
-                            <constraint firstItem="aNc-74-ZgE" firstAttribute="trailing" secondItem="Exr-Nh-dHF" secondAttribute="trailing" id="pwf-gn-lZh"/>
-                            <constraint firstAttribute="trailing" secondItem="cre-Qm-0QB" secondAttribute="trailing" constant="37" id="q3P-n8-Q8z"/>
-                            <constraint firstItem="cre-Qm-0QB" firstAttribute="leading" secondItem="aNc-74-ZgE" secondAttribute="leading" constant="38" id="uaS-cf-zXm"/>
+                            <constraint firstAttribute="trailing" secondItem="cre-Qm-0QB" secondAttribute="trailing" constant="25" id="jjo-hP-kWH"/>
+                            <constraint firstItem="aNc-74-ZgE" firstAttribute="trailing" secondItem="Exr-Nh-dHF" secondAttribute="trailing" id="kOd-TH-BR8"/>
+                            <constraint firstItem="lqe-Xl-eOt" firstAttribute="top" secondItem="cre-Qm-0QB" secondAttribute="bottom" constant="39" id="oxM-cC-vhL"/>
+                            <constraint firstItem="cre-Qm-0QB" firstAttribute="leading" secondItem="aNc-74-ZgE" secondAttribute="leading" constant="27" id="uSR-XD-nRH"/>
+                            <constraint firstAttribute="trailing" secondItem="ADJ-aw-svg" secondAttribute="trailing" constant="25" id="vU9-NF-Ryd"/>
+                            <constraint firstItem="Exr-Nh-dHF" firstAttribute="top" secondItem="aNc-74-ZgE" secondAttribute="top" constant="36" id="wS6-V9-Ntc"/>
+                            <constraint firstItem="SYY-kr-ons" firstAttribute="top" secondItem="ADJ-aw-svg" secondAttribute="bottom" constant="44" id="zvj-sX-JP1"/>
                         </constraints>
                     </view>
                 </viewController>
