--- a/LoginScreen/LoginScreen/Base.lproj/Main.storyboard
+++ b/LoginScreen/LoginScreen/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="271-KB-r5Y">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="yDq-CZ-gSe">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -91,7 +91,7 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <action selector="didTapLogInButton" destination="BYZ-38-t0r" eventType="touchUpInside" id="RqQ-BT-Gr7"/>
+                                    <action selector="onLogInButtonDidTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="hNh-Zp-yij"/>
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tbm-lr-iYe">
@@ -260,7 +260,7 @@
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <action selector="pop:" destination="gRX-lK-Ej6" eventType="touchUpInside" id="lQY-D9-8sQ"/>
+                                    <action selector="onSignUpButtonDidTap:" destination="gRX-lK-Ej6" eventType="touchUpInside" id="F9S-oK-kaW"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -300,7 +300,7 @@
         <!--Home Page View Controller-->
         <scene sceneID="VHd-W4-uaq">
             <objects>
-                <viewController id="271-KB-r5Y" customClass="HomePageViewController" customModule="LoginScreen" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="HomePageViewController" id="271-KB-r5Y" customClass="HomePageViewController" customModule="LoginScreen" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fZf-Kl-KyV">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -358,6 +358,9 @@
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="layer.MaskToBounds" value="YES"/>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="onLogOutButtonDidTap:" destination="271-KB-r5Y" eventType="touchUpInside" id="Nis-PI-cJc"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="aNc-74-ZgE"/>
@@ -391,10 +394,10 @@
             </objects>
             <point key="canvasLocation" x="1513.7404580152672" y="-27.464788732394368"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Main Navigation Controller-->
         <scene sceneID="2aF-n6-9vN">
             <objects>
-                <navigationController id="yDq-CZ-gSe" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="MainNavigationController" id="yDq-CZ-gSe" customClass="MainNavigationController" customModule="LoginScreen" customModuleProvider="target" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="wnx-8S-Nd0">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
